fix for mobile device horizontal scroll

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,4 +9,10 @@ body::-webkit-scrollbar{
 
 body {
   overflow-x: hidden;
+  width: 100%;
+}
+
+html {
+  overflow-x: hidden;
+  width: 100%;
 }
